# Tucker2EI_MPI

./: .clang-format  CMakeLists.txt
src/: BasisModifier.cpp  BasisSmoothScreener.cpp  BasisSmoothScreener.h  BlasWrapper.cpp  BlasWrapper.h  ConvolutionComputer.cpp  ConvolutionComputer.h  DataReader.cpp  DataReader.h  ExceptionHandler.h  FE.cpp  FE.h  FE3D.cpp  FE3D.h  FeCell.cpp  FeCell.h  FeMap.cpp  FeMap.h  FourIndexGenerator.cpp  FourIndexGenerator.h  FourIndexIntegrator.cpp  FourIndexIntegrator.h  Index2EI.h  Integrator.cpp  Integrator.h  Parameters.cpp  Parameters.h  QuadRule.cpp  QuadRule.h  TensorContainer.cpp  TensorContainer.h  TensorUtils.cpp  TensorUtils.h  Test.cpp  TestLoop.cpp  Tucker2EIComputeSelf.cpp  Tucker2EIConvParamComputer.cpp  TwoIndexIntegrator.cpp  TwoIndexIntegrator.h  main.cpp  (+3 more)
utils/: reader.cpp
